доработки по майнд мапу

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,11 +15,13 @@
         ⚙️
     </button>
     <div id="settingsMenu" class="hidden">
-        <button id="resetCanvasButton">Сбросить канвас</button>
+        <button class="button" id="resetCanvasButton">Сбросить канвас</button>
+        <button class="button" id="viewTermsButton">Посмотреть термины</button>
+        <button class="button" id="downloadCSVButton">Скачать CSV</button>
+        <button class="button" id="downloadJSONButton">Скачать JSON</button>
     </div>
 </div>
 <div id="cy"></div>
-
 <script src="mindmap.js"></script>
 <script src="app.js"></script>
 </body>
